<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">API Examples</string>
    <string name="app_description">Examples using Softenido and Android  API</string>
    <string name="battery_level_label">Battery level:</string>
    <string name="battery_display_plugged">AC:</string>
    <string name="battery_display_status">Status:</string>
    <string name="battery_display_health">Health</string>
    <string name="battery_display_present">Present:</string>
    <string name="battery_display_level">Nivel:</string>
    <string name="battery_display_technology">Technology:</string>
    <string name="battery_display_temperature">Temperature:</string>
    <string name="battery_display_voltage">Voltaje:</string>

    <string name="text_to_speech_text">Text</string>
    <string name="text_to_speech_edit">In a village of La Mancha, the name of which I have no desire to call to mind, there lived not long since one of those gentlemen that keep a lance in the lance-rack, an old buckler, a lean hack, and a greyhound for coursing. An olla of rather more beef than mutton, a salad on most nights, scraps on Saturdays, lentils on Fridays, and a pigeon or so extra on Sundays, made away with three-quarters of his income.</string>
    <string name="text_to_speech_say">Text to Speech</string>
    <string name="text_to_speech_install">Install Speech Synthesis Engine</string>
    <string name="text_to_speech_listen">Speech to Text</string>
    <string name="os_name">OS Name</string>
    <string name="os_arch">Arch</string>
    <string name="os_version">OS Version</string>
    <string name="os_jvm_version">JVM Version</string>
    <string name="os_android_version">Android</string>
    <string name="os_android_api">API Level</string>
    <string name="os_root_access">Root Access</string>
    <string name="about">About</string>
</resources>
