<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_to_speech_text" />

        <EditText
            android:id="@+id/text_to_speech_edit"
            android:text="@string/text_to_speech_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
                android:gravity="top"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="3"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/text_to_speech_say"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_to_speech_say" />
        <Button
            android:id="@+id/text_to_speech_install"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_to_speech_install" />
        <Button
            android:id="@+id/text_to_speech_listen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/text_to_speech_listen" />
        <ToggleButton
            android:id="@+id/text_to_speech_port"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textOn="port [9999]"
            android:textOff="port 9999"/>
    </LinearLayout>

</LinearLayout>